--- a/EkoClient/src/app/app.component.html
+++ b/EkoClient/src/app/app.component.html
@@ -1,24 +1,10 @@
-<nav class="eko-menu">
-  <ul class="eko-menu__list">
-    <li clas="eko-menu__item">
-      Producto
-      <nav class="eko-menu__sub-menu">
-        <ul class="eko-menu__list">
-          <li class="eko-menu__item">
-            <a class="eko-menu__link" routerLink="/product/add">Crear producto</a>
-          </li>
-        </ul>
-      </nav>
-    </li>
-    <li>
-      <a (click)="obetenerTodosLosProductos($event)" href="#">Obtener todos los productos</a>
-    </li>
-  </ul>
-</nav>
-
-<div>
+<!-- <li>
+  <a (click)="obetenerTodosLosProductos($event)" href="#">Obtener todos los productos</a>
+</li> -->
+<!-- <div>
   <label for="">Buscar por ID</label>
   <input type="text" class="" [(ngModel)]="id" name="id" required>
   <button type="button" (click)="buscarPorID()">Buscar</button>
-</div>
+</div> -->
+<app-menu></app-menu>
 <router-outlet></router-outlet>
