--- a/EkoClient/src/styles.scss
+++ b/EkoClient/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-color: rgb(246, 246, 246);
+}
+
+.eko-title {
+  font-family: 'Permanent Marker', cursive;
+}
