--- a/EkoClient/src/app/user/login/login.component.html
+++ b/EkoClient/src/app/user/login/login.component.html
@@ -15,6 +15,13 @@
       <div class="col-6 offset-3">
         <button class="btn btn-dark btn-lg btn-block btn-sm" type="submit">Iniciar sesión</button>
       </div>
+      <div class="col-12 eko-login__form-registrar">
+        <label>¿No eres usuario?
+          <a routerLink="/user/register" routerLinkActive="router-link-active" >
+            ¡Regístrate aquí!
+          </a>
+        </label>
+      </div>
     </div>
   </form>
 </div>
