--- a/EkoClient/src/app/nav/menu/menu.component.html
+++ b/EkoClient/src/app/nav/menu/menu.component.html
@@ -1,5 +1,5 @@
 <nav class="eko-menu navbar navbar-expand-lg navbar-light bg-dark">
-  <a class="navbar-brand eko-title" href="#">EKO</a>
+  <a class="navbar-brand eko-title" routerLink="/home" routerLinkActive="router-link-active" >EKO</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -12,7 +12,7 @@
         <nav class="eko-menu__sub-menu dropdown-menu" aria-labelledby="navbarDropdownMenuLinkProducto">
           <ul class="eko-menu__list">
             <li class="eko-menu__item dropdown-item">
-              <a class="eko-menu__link" routerLink="/product/add">Crear producto</a>
+              <a class="eko-menu__link" routerLink="/product/add" *ngIf="esUsuarioProveedor">Crear producto</a>
             </li>
           </ul>
         </nav>
@@ -26,7 +26,11 @@
               <a class="eko-menu__link" routerLink="/user/login" *ngIf="!haySesionDeUsuario">Iniciar sesión</a>
             </li>
             <li class="eko-menu__item dropdown-item">
-              <a class="eko-menu__link nav-link" routerLink="/" (click)="cerrarSesion()" *ngIf="haySesionDeUsuario">Cerrar sesión</a>
+              <a class="eko-menu__link" routerLink="/user/register" *ngIf="!haySesionDeUsuario">Registrarse</a>
+            </li>
+            <li class="eko-menu__item dropdown-item">
+              <a class="eko-menu__link nav-link" routerLink="/" (click)="cerrarSesion()"
+                *ngIf="haySesionDeUsuario">Cerrar sesión</a>
             </li>
           </ul>
         </nav>
