--- a/EkoClient/src/app/user/profile/profile.component.scss
+++ b/EkoClient/src/app/user/profile/profile.component.scss
@@ -34,12 +34,17 @@
       }
     }
 
-    &-edit-btn {
+    &-btn-group {
       position: absolute;
       right: 8px;
       bottom: 0;
-      transform: translateY(calc(100% + 8px));
+      transform: translateY(calc(100% + 16px));
+      
+      .eko-btn {
+        margin-left: 8px;
+      }
     }
+
 
     &-title,
     &-tipo-usuario {
