--- a/EkoClient/src/app/user/profile/profile.component.html
+++ b/EkoClient/src/app/user/profile/profile.component.html
@@ -23,23 +23,23 @@
           <div class="eko-profile__footer-info">
             <i class="fa fa-phone"></i>
             <label>
-              {{ this.usuario.telefono }}
+              {{ this.usuario['telefono'] }}
             </label>
           </div>
           <div class="eko-profile__footer-info">
-            <a href="https://{{ this.usuario.paginaWeb }}" class="fa fa-globe" target="_blank">
+            <a href="https://{{ this.usuario['paginaWeb'] }}" class="fa fa-globe" target="_blank">
             </a>
-            <a class="eko-profile__footer-info-link eko-link" href="https://{{ this.usuario.paginaWeb }}" target="_blank">{{ this.usuario.paginaWeb }}</a>
+            <a class="eko-profile__footer-info-link eko-link" href="https://{{ this.usuario['paginaWeb'] }}" target="_blank">{{ this.usuario['paginaWeb'] }}</a>
           </div>
           <div class="eko-profile__footer-info">
-            <a href="https://www.facebook.com/{{ this.usuario.contactoFacebook }}" class="fa fa-facebook" target="_blank">
+            <a href="https://www.facebook.com/{{ this.usuario['contactoFacebook'] }}" class="fa fa-facebook" target="_blank">
             </a>
-            <a class="eko-profile__footer-info-link eko-link" href="https://www.facebook.com/{{ this.usuario.contactoFacebook }}" target="_blank">{{ this.usuario.contactoFacebook }}</a>
+            <a class="eko-profile__footer-info-link eko-link" href="https://www.facebook.com/{{ this.usuario['contactoFacebook'] }}" target="_blank">{{ this.usuario['contactoFacebook'] }}</a>
           </div>
           <div class="eko-profile__footer-info">
-            <a href="https://twitter.com/{{ this.usuario.contactoTwitter }}" class="fa fa-twitter" target="_blank">
+            <a href="https://twitter.com/{{ this.usuario['contactoTwitter'] }}" class="fa fa-twitter" target="_blank">
             </a>
-            <a class="eko-profile__footer-info-link eko-link" href="https://twitter.com/{{ this.usuario.contactoTwitter }}" target="_blank">{{ this.usuario.contactoTwitter }}</a>
+            <a class="eko-profile__footer-info-link eko-link" href="https://twitter.com/{{ this.usuario['contactoTwitter'] }}" target="_blank">{{ this.usuario['contactoTwitter'] }}</a>
           </div>
         </footer>
       </div>
