Reservas con su correspondiente producto y cliente

--- a/EkoClient/src/app/app.component.html
+++ b/EkoClient/src/app/app.component.html
@@ -7,11 +7,17 @@
           <li class="eko-menu__item">
             <a class="eko-menu__link" routerLink="/product/add">Crear producto</a>
           </li>
+          <li class="eko-menu__item">
+            <a class="eko-menu__link" routerLink="/reserva">Hacer reserva</a>
+          </li>
         </ul>
       </nav>
     </li>
     <li>
       <a (click)="obetenerTodosLosProductos($event)" href="#">Obtener todos los productos</a>
+    </li>
+    <li class="eko-menu__item">
+      <a class="eko-menu__link" routerLink="#">Mis reservas</a>
     </li>
   </ul>
 </nav>
