--- a/EkoClient/src/app/nav/menu/menu.component.html
+++ b/EkoClient/src/app/nav/menu/menu.component.html
@@ -12,7 +12,7 @@
         <nav class="eko-menu__sub-menu dropdown-menu" aria-labelledby="navbarDropdownMenuLinkProducto">
           <ul class="eko-menu__list">
             <li class="eko-menu__item dropdown-item">
-              <a class="eko-menu__link" routerLink="/product/add" *ngIf="esUsuarioProveedor">Crear producto</a>
+              <a class="eko-menu__link" routerLink="/product/add" >Crear producto</a>
             </li>
           </ul>
         </nav>
