--- a/EkoClient/src/app/form/product-form/product-form.component.html
+++ b/EkoClient/src/app/form/product-form/product-form.component.html
@@ -1,71 +1,97 @@
-<section class="product-form container">
-  <h1>Crear Producto</h1>
-  <form class="row" #f="ngForm" (ngSubmit)="onSubmit()">
-    <!-- <div class="col-12">
-      <label for="">ID</label>
-      <input type="text" class="form-control" [(ngModel)]="nTransporte._id" name="id" required>
-    </div> -->
-    <div class="col-12">
-      <label for="">Descripción</label>
-      <input type="text" class="form-control" [(ngModel)]="nTransporte.descripcion" name="descripcion" required>
-    </div>
-    <h6>
-      <strong class="col-12">Disponibilidad</strong>
-    </h6>
-    <div class="container col-12">
-      <div class="row">
-        <div class="col-6">
-          <label for="">Fecha</label>
-          <input type="text" class="form-control" [(ngModel)]="nDisponibilidad.fecha" name="fecha-dis-0" required>
-        </div>
-        <div class="col-6">
-          <label for="">Cupos disponibles</label>
-          <input type="number" class="form-control" [(ngModel)]="nDisponibilidad.cuposDisponibles" name="fecha-cupos-0" required>
+<section class="eko-register container">
+  <header class="eko-register__header">
+    <h1 class="eko-register__title eko-title">EKO</h1>
+  </header>
+  <form class="eko-register__form container" #f="ngForm">
+    <h3 class="eko-register__form-title">Crear producto</h3>
+    <div class="eko-register__form-wrapper row">
+      <div class="col-12">
+        <label for="">Descripción</label>
+        <textarea placeholder="Descripción" type="text" class="form-control" [(ngModel)]="descripcion"
+          name="descripcion" required></textarea>
+      </div>
+      <h6>
+        <strong class="col-12">Disponibilidad</strong>
+      </h6>
+      <div class="container col-12" *ngFor="let disponibilidad of listaDisponibilidad; let i = index">
+        <div class="row">
+          <div class="col-6">
+            <label for="">Fecha</label>
+            <input type="date" class="form-control" [(ngModel)]="disponibilidad.fecha" name="fecha-dis-{{i}}" required>
+          </div>
+          <div class="col-6">
+            <label for="">Cupos disponibles</label>
+            <input type="number" class="form-control" [(ngModel)]="disponibilidad.cuposDisponibles"
+              name="fecha-cupos-{{i}}" required>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-12">
-      <label for="">Información del destino</label>
-      <input type="text" class="form-control" [(ngModel)]="nTransporte.infoPaisDestino" name="infoPaisDestino" required>
-    </div>
-    <div class="col-6">
-      <label for="">Precio</label>
-      <input type="number" class="form-control" [(ngModel)]="nTransporte.precio" name="precio" required>
-    </div>
-    <!-- <div class="col-6">
-      <label for="">Tipo</label>
-      <select class="form-control" [(ngModel)]="nTransporte.tipo" name="tipo" required>
-        <option [ngValue]="" value="" disabled selected>Seleccione el tipo de producto</option>
-        <option [ngValue]="TRANSPORTE" value="TRANSPORTE">TRANSPORTE</option>
-      </select>
-    </div> -->
-    <div class="col-6">
-      <label for="">Hora de salida</label>
-      <input type="number" class="form-control" [(ngModel)]="nTransporte.horaSalida" name="horaSalida" required>
-    </div>
-    <div class="col-6">
-      <label for="">Hora de llegada</label>
-      <input type="number" class="form-control" [(ngModel)]="nTransporte.horaLlegada" name="horaLlegada" required>
-    </div>
-    <!-- <div class="col-12">
-      <label for="">Tipo de transporte</label>
-      <select class="form-control" [(ngModel)]="nTransporte.tipoTransporte" name="tipoTransporte" required>
-        <option [ngValue]="" value="" disabled selected>Seleccione el tipo de transporte</option>
-        <option [ngValue]="TERRESTRE" value="TERRESTRE" >TERRESTRE</option>
-        <option [ngValue]="AEREO" value="AEREO" >AEREO</option>
-        <option [ngValue]="MARITIMO" value="MARITIMO" >MARITIMO</option>
-      </select>
-    </div> -->
-    <div class="col-6">
-      <label for="">Trayecto</label>
-      <input type="text" class="form-control" [(ngModel)]="nTrayecto" name="trayecto" required>
-    </div>
-    <div class="col-6">
-      <label for="">Duración</label>
-      <input type="number" class="form-control" [(ngModel)]="nTransporte.duracion" name="duracion" required>
-    </div>
-    <div class="col-12">
-      <button class="btn btn-dark btn-lg btn-block" style="margin: 20px 0;">Send</button>
+      <div class="col-6">
+        <button class="btn btn-success btn-sm btn-block" style="margin: 20px 0;"
+          (click)="agregarDisponibilidad()">Agregar disponibilidad</button>
+      </div>
+      <div class="col-6">
+        <button class="btn btn-danger btn-sm btn-block" style="margin: 20px 0;"
+          (click)="eliminarDisponibilidad()">Eliminar última disponibilidad</button>
+      </div>
+      <div class="col-12">
+        <label for="">Información del destino</label>
+        <input type="text" class="form-control" [(ngModel)]="infoPaisDestino" name="infoPaisDestino" required>
+      </div>
+      <div class="col-6">
+        <label for="">Precio</label>
+        <input type="number" class="form-control" [(ngModel)]="precio" name="precio" required>
+      </div>
+      <div class="col-6">
+        <label for="tiposProducto">Tipo de producto</label>
+        <select class="form-control" [(ngModel)]="tipo" name="tiposProducto" required
+          (ngModelChange)="seleccionarTipo()">
+          <option *ngFor="let tipoProducto of tiposProducto" [ngValue]="tipoProducto">{{tipoProducto}}</option>
+        </select>
+      </div>
+      <!-- TRANSPORTE -->
+      <ng-container *ngIf="tipo === 'TRANSPORTE'">
+        <div class="col-6">
+          <label for="">Hora de salida</label>
+          <input type="time" class="form-control" [(ngModel)]="producto.horaSalida" name="horaSalida" required>
+        </div>
+        <div class="col-6">
+          <label for="">Hora de llegada</label>
+          <input type="time" class="form-control" [(ngModel)]="producto.horaLlegada" name="horaLlegada" required>
+        </div>
+        <div class="col-6">
+          <label for="tiposTransporte">Tipo de transporte</label>
+          <select class="form-control" [(ngModel)]="producto.tipoTransporte" name="tiposTransporte" required>
+            <option *ngFor="let tipoTransporte of tiposProductoEspecifico" [ngValue]="tipoTransporte">{{tipoTransporte}}
+            </option>
+          </select>
+        </div>
+        <div class="col-6">
+          <label for="">Druación del viaje (minutos)</label>
+          <input type="number" class="form-control" [(ngModel)]="producto.duracion" name="duracion" required>
+        </div>
+        <div class="container col-12" *ngFor="let trayecto of listaTrayecto; let j = index">
+          <div class="row">
+            <div class="col-12">
+              <label for="">Trayecto</label>
+              <input type="text" class="form-control" [(ngModel)]="trayecto.valor"  name="trayecto-{{j}}" required>
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <button class="btn btn-success btn-sm btn-block" style="margin: 20px 0;"
+            (click)="agregarTrayecto()">Agregar trayecto</button>
+        </div>
+        <div class="col-6">
+          <button class="btn btn-danger btn-sm btn-block" style="margin: 20px 0;"
+            (click)="eliminarTrayecto()">Eliminar último trayecto</button>
+        </div>
+      </ng-container>
+      <div class="col-12">
+        <button class="btn btn-dark btn-lg btn-block" style="margin: 20px 0;" (click)="onSubmit()">Crear</button>
+          <!-- <button class="btn btn-dark btn-lg btn-block" style="margin: 20px 0;" (click)="onSubmit()"
+          [disabled]="!f.valid">Crear</button> -->
+      </div>
     </div>
   </form>
 </section>
