--- a/EkoClient/src/app/form/product-form/product-form.component.html
+++ b/EkoClient/src/app/form/product-form/product-form.component.html
@@ -179,11 +179,11 @@
         </div>
         <div class="col-6">
           <label for="">Hora de apertura</label>
-          <input type="number" class="form-control" [(ngModel)]="producto.horaApertura" name="horaApertura" required>
+          <input type="time" class="form-control" [(ngModel)]="producto.horaApertura" name="horaApertura" required>
         </div>
         <div class="col-6">
           <label for="">Hora de cierre</label>
-          <input type="number" class="form-control" [(ngModel)]="producto.horaCierre" name="horaCierre" required>
+          <input type="time" class="form-control" [(ngModel)]="producto.horaCierre" name="horaCierre" required>
         </div>
         <div class="col-6">
           <label for="">Número máximo de personas</label>
@@ -230,8 +230,8 @@
           <input type="number" class="form-control" [(ngModel)]="producto.duracion" name="duracion" required>
         </div>
         <div class="col-6">
-          <label for="">Hora de lelgada</label>
-          <input type="number" class="form-control" [(ngModel)]="producto.horaLlegada" name="horaLlegada" required>
+          <label for="">Hora de llegada</label>
+          <input type="time" class="form-control" [(ngModel)]="producto.horaLlegada" name="horaLlegada" required>
         </div>
       </ng-container>
       <!-- SALIDA -->
@@ -308,11 +308,11 @@
         </div>
         <div class="col-6">
           <label for="">Hora de apertura</label>
-          <input type="number" class="form-control" [(ngModel)]="producto.horaApertura" name="horaApertura" required>
+          <input type="time" class="form-control" [(ngModel)]="producto.horaApertura" name="horaApertura" required>
         </div>
         <div class="col-6">
           <label for="">Hora de cierre</label>
-          <input type="number" class="form-control" [(ngModel)]="producto.horaCierre" name="horaCierre" required>
+          <input type="time" class="form-control" [(ngModel)]="producto.horaCierre" name="horaCierre" required>
         </div>
       </ng-container>
       <div class="col-12">
