--- a/EkoClient/src/styles.scss
+++ b/EkoClient/src/styles.scss
@@ -3,6 +3,10 @@ body {
   background-color: rgb(246, 246, 246);
 }
 
+img {
+  max-width: 100%;
+}
+
 .eko-title {
   font-family: 'Permanent Marker', cursive;
 }
