--- a/EkoClient/src/app/market-place/market-place.component.html
+++ b/EkoClient/src/app/market-place/market-place.component.html
@@ -1,1 +1,9 @@
-<p>market-place works!</p>
+<div class="container">
+  <div class="row">
+    <ng-container *ngFor="let producto of productos">
+      <div class="col-4">
+        <app-product-view-small [producto]="producto"></app-product-view-small>
+      </div>
+    </ng-container>
+  </div>
+</div>
