--- a/EkoClient/src/app/car/car-view/car-view.component.html
+++ b/EkoClient/src/app/car/car-view/car-view.component.html
@@ -1,10 +1,63 @@
+<article *ngIf="hayReservas">
+  <div class="container">
+    <div class="row">
+      <h6 class="col-12">Reservas del usuario</h6>
+      <ng-container *ngFor="let reserva of reservas">
+        <div class="col-5">
+          ID Producto: {{ reserva.productoid }}
+        </div>
+        <div class="col-5">
+          Fecha: {{ reserva.fechas }}
+        </div>
+        <div class="col-1">
+          <a class="eko-link" (click)="eliminarReserva(reserva)">Eliminar</a>
+        </div>
+        <br>
+        <br>
+        <br>
+      </ng-container>
+    </div>
+  </div>
+</article>
 <article *ngIf="hayCarrito">
   <div class="container">
     <div class="row">
+      <h6 class="col-12">Productos en el carrito</h6>
       <ng-container *ngFor="let producto of productos">
-        <div class="col-12">
-          {{producto._id}}
+        <div class="col-4">
+          ID: {{ producto._id }}
         </div>
+        <div class="col-5">
+          Descripcion: {{ producto.descripcion }}
+        </div>
+        <div class="col-1">
+          <a class="eko-link" (click)="eliminarDelCarrito(producto._id)">Eliminar</a>
+        </div>
+        <div class="col-1">
+          <a class="eko-link" routerLink="/product/{{ producto.tipo }}/{{producto._id}}"
+            routerLinkActive="router-link-active">Ver</a>
+        </div>
+        <div class="col-1">
+          <a class="eko-link" (click)="abrirInfoReserva(producto)">Expandir</a>
+        </div>
+        <ng-container *ngIf="producto.verInfoProducto">
+          <ng-container *ngFor="let disponibilidad of producto.disponibilidad">
+            <h6 class="col-12">Disponibilidad</h6>
+            <div class="col-5">
+              Fecha: {{ disponibilidad.fecha }}
+            </div>
+            <div class="col-5">
+              Cupos disponibles: {{ disponibilidad.cuposDisponibles }}
+            </div>
+            <div class="col-2">
+              <a class="eko-link" (click)="reservarProducto(producto, disponibilidad)">Reservar</a>
+            </div>
+          </ng-container>
+        </ng-container>
+        <br>
+        <br>
+        <br>
+        <br>
       </ng-container>
     </div>
   </div>
