Calificación y pregunta agregadas

--- a/EkoClient/src/app/product/product-view/product-view.component.html
+++ b/EkoClient/src/app/product/product-view/product-view.component.html
@@ -119,6 +119,11 @@
           </div>
         </ng-container>
         <a class="eko-link" (click)="agregarAlCarrito()">Añadir al carrito</a>
+        <br>
+        <br>
+        <br>
+        <app-rate-form [idProducto]="producto._id"></app-rate-form>
+        <app-question-form [idProducto]="producto._id"></app-question-form>
       </div>
     </div>
   </div>
