--- a/EkoClient/src/app/product/product-view-small/product-view-small.component.html
+++ b/EkoClient/src/app/product/product-view-small/product-view-small.component.html
@@ -5,5 +5,6 @@
   <p>{{ producto.descripcion }}</p>
   <p>Tipo: {{ producto.tipo }}</p>
   <p>Precio: {{ producto.precio }}</p>
-  <a routerLink="/product/{{ producto.tipo }}/{{producto._id}}" routerLinkActive="router-link-active">Ver</a>
+  <a routerLink="/product/{{ producto.tipo }}/{{producto._id}}" routerLinkActive="router-link-active" class="eko-link">Ver</a>
+  <a *ngIf="canEdit" routerLink="/product-edit/{{producto._id}}" routerLinkActive="router-link-active" class="eko-link">Editar</a>
 </article>
