--- a/EkoClient/src/app/user/profile/profile.component.html
+++ b/EkoClient/src/app/user/profile/profile.component.html
@@ -6,14 +6,17 @@
           <figure class="eko-profile__header-img-container">
             <img src="https://api.adorable.io/avatars/400/{{this.usuario.nombre}}">
             <div class="eko-profile__header-btn-group">
-              <a class="eko-profile__header-delete-btn eko-btn eko-link-danger-button" (click)="eliminarCuenta()">Eliminar cuenta</a>
-              <a class="eko-profile__header-edit-btn eko-btn eko-link-button" routerLink="/user/edit" routerLinkActive="router-link-active" >Editar perfil</a>
+              <a class="eko-profile__header-delete-btn eko-btn eko-link-danger-button"
+                (click)="eliminarCuenta()">Eliminar cuenta</a>
+              <a class="eko-profile__header-edit-btn eko-btn eko-link-button" routerLink="/user/edit"
+                routerLinkActive="router-link-active">Editar perfil</a>
             </div>
           </figure>
           <div class="eko-profile__header-info">
             <h2 class="eko-profile__header-title">{{ this.usuario.nombre }} ({{ this.usuario.edad }} años)</h2>
             <h3 class="eko-profile__header-tipo-usuario">{{ this.usuario.tipoUsuario }}</h3>
-            <a class="eko-profile__header-correo eko-link" href="mailto:{{ this.usuario.correo }}?subject = Contacto">{{ this.usuario.correo }}</a>
+            <a class="eko-profile__header-correo eko-link"
+              href="mailto:{{ this.usuario.correo }}?subject = Contacto">{{ this.usuario.correo }}</a>
           </div>
         </header>
         <div class="eko-profile__info-container">
@@ -29,20 +32,36 @@
           <div class="eko-profile__footer-info">
             <a href="https://{{ this.usuario['paginaWeb'] }}" class="fa fa-globe" target="_blank">
             </a>
-            <a class="eko-profile__footer-info-link eko-link" href="https://{{ this.usuario['paginaWeb'] }}" target="_blank">{{ this.usuario['paginaWeb'] }}</a>
+            <a class="eko-profile__footer-info-link eko-link" href="https://{{ this.usuario['paginaWeb'] }}"
+              target="_blank">{{ this.usuario['paginaWeb'] }}</a>
           </div>
           <div class="eko-profile__footer-info">
-            <a href="https://www.facebook.com/{{ this.usuario['contactoFacebook'] }}" class="fa fa-facebook" target="_blank">
+            <a href="https://www.facebook.com/{{ this.usuario['contactoFacebook'] }}" class="fa fa-facebook"
+              target="_blank">
             </a>
-            <a class="eko-profile__footer-info-link eko-link" href="https://www.facebook.com/{{ this.usuario['contactoFacebook'] }}" target="_blank">{{ this.usuario['contactoFacebook'] }}</a>
+            <a class="eko-profile__footer-info-link eko-link"
+              href="https://www.facebook.com/{{ this.usuario['contactoFacebook'] }}"
+              target="_blank">{{ this.usuario['contactoFacebook'] }}</a>
           </div>
           <div class="eko-profile__footer-info">
             <a href="https://twitter.com/{{ this.usuario['contactoTwitter'] }}" class="fa fa-twitter" target="_blank">
             </a>
-            <a class="eko-profile__footer-info-link eko-link" href="https://twitter.com/{{ this.usuario['contactoTwitter'] }}" target="_blank">{{ this.usuario['contactoTwitter'] }}</a>
+            <a class="eko-profile__footer-info-link eko-link"
+              href="https://twitter.com/{{ this.usuario['contactoTwitter'] }}"
+              target="_blank">{{ this.usuario['contactoTwitter'] }}</a>
           </div>
         </footer>
       </div>
     </div>
   </div>
 </article>
+
+<div class="container">
+  <div class="row">
+    <ng-container *ngFor="let producto of productos">
+      <div class="col-4">
+        <app-product-view-small [producto]="producto" [canEdit]="true"></app-product-view-small>
+      </div>
+    </ng-container>
+  </div>
+</div>
